[tool.poetry]
name = "phase0"
version = "0.1.0"
description = "Phase 0 scaffolding"
authors = ["Logan Selner loganselner@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.5.0"
isort = "^5.13.2"
pytest = "^8.0.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
